<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.simpotech.app.hlgg.ui.activity.MainActivity">

    <include layout="@layout/layout_title"/>

    <TextView
        android:id="@+id/tv_permission_info"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="操作员(200600011)"
        android:textSize="20sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_stockin"
            android:drawableLeft="@drawable/vector_icon_stockin"
            style="@style/main_button"
            android:text="@string/stockin"/>
        <Button
            android:id="@+id/btn_stockin_query"
            android:drawableLeft="@drawable/vector_icon_stockquery"
            style="@style/main_button"
            android:text="@string/stockin_query"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_stockout"
            android:drawableLeft="@drawable/vector_icon_stockout"
            style="@style/main_button"
            android:text="@string/stockout"/>
        <Button
            android:id="@+id/btn_stockout_query"
            android:drawableLeft="@drawable/vector_icon_stockquery"
            style="@style/main_button"
            android:text="@string/stockout_query"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_quality"
            android:drawableLeft="@drawable/vector_icon_quality"
            style="@style/main_button"
            android:text="@string/quality"
        />
        <Button
            android:id="@+id/btn_quality_query"
            android:drawableLeft="@drawable/vector_icon_quality_query"
            style="@style/main_button"
            android:text="@string/quality_query"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_Invoice"
            android:drawableLeft="@drawable/vector_icon_invoice"
            style="@style/main_button"
            android:text="@string/invoice"
        />
        <Button
            android:id="@+id/btn_Invoice_manager"
            android:drawableLeft="@drawable/vector_icon_invoice_man"
            style="@style/main_button"
            android:text="@string/invoice_manager"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_contruction_query"
            android:drawableLeft="@drawable/vector_icon_contru"
            style="@style/main_button"
            android:text="@string/contruction_query"
        />
        <Button
            android:id="@+id/btn_process"
            android:drawableLeft="@drawable/vector_icon_process"
            style="@style/main_button"
            android:text="@string/process"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_proLine"
            android:drawableLeft="@drawable/vector_icon_proline"
            style="@style/main_button"
            android:text="@string/proLine"/>
        <Button
            style="@style/main_button"
            android:text=""
            android:visibility="invisible"/>
    </LinearLayout>


</LinearLayout>
